setting up notebook

--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -12,7 +12,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Importing necessary packages\n"
+    "## Importing necessary packages and setting up\n",
+    "Change the **project_dir** for the folder name where you want to store your output. Then, run the following cells."
    ]
   },
   {
@@ -20,7 +21,31 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "project_dir = 'demo_project'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import keypoint_moseq as kpms\n",
+    "config = lambda: kpms.load_config(project_dir)\n",
+    "\n",
+    "dlc_config = 'dlc_project/config.yaml'\n",
+    "kpms.setup_project(project_dir, deeplabcut_config=dlc_config)\n",
+    "\n",
+    "kpms.update_config(\n",
+    "    project_dir,\n",
+    "    video_dir='dlc_project/videos/',\n",
+    "    anterior_bodyparts=['nose'],\n",
+    "    posterior_bodyparts=['spine4'],\n",
+    "    use_bodyparts=[\n",
+    "        'spine4', 'spine3', 'spine2', 'spine1',\n",
+    "        'head', 'nose', 'right ear', 'left ear'])"
+   ]
   }
  ],
  "metadata": {
